--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -29,6 +29,7 @@
 
 import /vendor/etc/init/hw/init.xiaomi.fingerprint.rc
 import /vendor/etc/init/hw/init.xiaomi.rc
+import /vendor/etc/init/hw/init.surya.charger.rc
 
 on early-init
     write /proc/sys/kernel/sched_boost 1
