--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -28,8 +28,8 @@
 #
 
 import /vendor/etc/init/hw/init.xiaomi.fingerprint.rc
-import /vendor/etc/init/hw/init.xiaomi.rc
-import /vendor/etc/init/hw/init.surya.charger.rc
+import /vendor/etc/init/hw/init.xiaomi.rci
+import /vendor/etc/init/hw/init.hardware.diag.rc
 
 on early-init
     write /proc/sys/kernel/sched_boost 1
