--- a/init/init.hardware.diag.rc
+++ b/init/init.hardware.diag.rc
@@ -25,6 +25,8 @@ on post-fs-data
     # WLAN logging collection
     mkdir /data/vendor/wifi 0777 system system
     mkdir /data/vendor/wifi/cnss_diag 0777 system system
+    # Change DIAG serial num to MSM
+    exec u:r:vendor_qti_init_shell:s0 -- /vendor/bin/init.hardware.diag.sh
 
 service diag_mdlog_start /vendor/bin/diag_mdlog
     class late_start
