--- a/init/init.surya.rc
+++ b/init/init.surya.rc
@@ -27,8 +27,8 @@ on early-boot
     write /sys/bus/msm_subsys/devices/subsys7/restart_level RELATED
 
 on init
-    chown system system /proc/tp_gesture
-    chmod 0644 /proc/tp_gesture
+    chown system system /sys/touchpanel/double_tap
+    chmod 0644 /sys/touchpanel/double_tap
 
     chown system system /sys/module/battery_saver/parameters/enabled
     chmod 0664 /sys/module/battery_saver/parameters/enabled
